# PersonalAIgent

./: README.md  pyproject.toml  simple_Chat_bot.py
data/: agents.yaml
src/: ai_config.py  ai_schema.py
